content/docs/0.8.x/reference/cli/commands/keptn_trigger.md
---
date: "2021-06-16T14:50:20+02:00"
title: "keptn trigger"
slug: keptn_trigger
---
## keptn trigger

Triggers the execution of an action in keptn

### Synopsis

Triggers the execution of an action in keptn

### Options inherited from parent commands

```
  -h, --help               help
      --mock               Disables communication to a Keptn endpoint
  -n, --namespace string   Specify the namespace where Keptn should be installed, used and uninstalled in (default "keptn")
  -q, --quiet              Suppresses debug and info messages
  -v, --verbose            Enables verbose logging to print debug messages
  -y, --yes                Assume yes for all user prompts
```

### SEE ALSO

* [keptn](../keptn/)	 - The CLI for using Keptn
* [keptn trigger delivery](../keptn_trigger_delivery/)	 - Triggers the delivery of a new artifact for a service in a project
* [keptn trigger evaluation](../keptn_trigger_evaluation/)	 - Triggers the evaluation of a test for a service in a project and stage

###### Auto generated by spf13/cobra on 16-Jun-2021
